[package]
name = "qip-gpu"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qip = "^0.15.3"
wgpu = "^0.10"
bytemuck = { version = "^1.7", features = [ "derive" ] }
pollster = "^0.2"
log = "0.4"
env_logger = "0.7"